Fixed last section dd. Removed dd/collapse fix

--- a/course/format/culcourse/scss/styles.scss
+++ b/course/format/culcourse/scss/styles.scss
@@ -243,6 +243,9 @@ body.format-culcourse {
                 }
             }        
         }
+        li:last-child .add_section {
+            display: none;
+        }
     }
     .insertsection {
         text-align: center;
